--- a/test_heat_pump.ipynb
+++ b/test_heat_pump.ipynb
@@ -19,38 +19,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculate COP Called\n",
-      "Average Theoretical COP:  9.20375 dimensionless\n",
-      "Average Estimated COP:  4.601875 dimensionless\n",
-      "Calculate Energy and Mass Called\n",
-      "Hot Mass Flow Average: 99.0 kg/s\n",
-      "Cold Average Outlet Temperature: 56.00 °C\n",
-      "Average Power Draw of Heat Pump: 217.254 kW\n",
-      "Maximum Power Draw of Heat Pump: 217.254 kW\n",
-      "Annual Electricity in: 1,903,144.9 kWh\n",
-      "Calculate Heat Pump Costs\n",
-      "Capital Cost: 589,867.65 $\n",
-      "Capacity Factor: 1.000\n",
-      "One Year Fixed O&M Costs: 40.25 $·MMBtu/h/kW/yr\n",
-      "One Year Variable O&M Costs: 1,494.18 $/yr\n",
-      "One Year Energy Costs: 64,133.38 $/yr\n",
-      "One Year Operating Costs: 264.18 $·MMBtu/h/kW/yr\n",
-      "Lifetime LCOH: 3.58 $/MMBtu\n",
-      "Calculate Natural Gas Comparison\n",
-      "Gas Capital Cost: 383,779.77 $\n",
-      "Gas One Year Fixed O&M Costs: 170.57 $/yr\n",
-      "Gas One Year Variable O&M Costs: 373.55 $/yr\n",
-      "Gas One Year Energy Costs: 104,592.78 $/yr\n",
-      "Gas One Year Operating Costs: 105,136.89 $/yr\n",
-      "Gas Lifetime LCOH: 4.16 $/MMBtu\n",
-      "Calculate Cash Flow\n",
-      "NPV: -195,600.61 $\n",
-      "IRR: 0.005 pct\n",
-      "PBP: NA yr\n",
-      "Writing all output to a file\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'model_inputs.yml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jcox/Documents/GitHub/heat_pump_model/test_heat_pump.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jcox/Documents/GitHub/heat_pump_model/test_heat_pump.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m hp_test \u001b[39m=\u001b[39m heat_pump()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jcox/Documents/GitHub/heat_pump_model/test_heat_pump.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m hp_test\u001b[39m.\u001b[39mconstruct_yaml_input_quantities(\u001b[39m'\u001b[39m\u001b[39mmodel_inputs.yml\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jcox/Documents/GitHub/heat_pump_model/test_heat_pump.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m hp_test\u001b[39m.\u001b[39mhot_temperature_desired \u001b[39m=\u001b[39m Q_(np\u001b[39m.\u001b[39marray([\u001b[39m90\u001b[39m]\u001b[39m*\u001b[39m\u001b[39m8760\u001b[39m), \u001b[39m'\u001b[39m\u001b[39mdegC\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/GitHub/heat_pump_model/heat_pump_model.py:69\u001b[0m, in \u001b[0;36mheat_pump.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpayback_period \u001b[39m=\u001b[39m Q_(\u001b[39m'\u001b[39m\u001b[39m100.0 yr\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     67\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_hrs \u001b[39m=\u001b[39m \u001b[39m8760\u001b[39m\n\u001b[0;32m---> 69\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconstruct_yaml_input_quantities(\u001b[39m'\u001b[39;49m\u001b[39mmodel_inputs.yml\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m~/Documents/GitHub/heat_pump_model/heat_pump_model.py:73\u001b[0m, in \u001b[0;36mheat_pump.construct_yaml_input_quantities\u001b[0;34m(self, file_path)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconstruct_yaml_input_quantities\u001b[39m(\u001b[39mself\u001b[39m, file_path):\n\u001b[0;32m---> 73\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_path, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m file_desc:\n\u001b[1;32m     74\u001b[0m         input_dict \u001b[39m=\u001b[39m yaml\u001b[39m.\u001b[39msafe_load(file_desc)\n\u001b[1;32m     76\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m input_dict:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'model_inputs.yml'"
      ]
     }
    ],
@@ -78,7 +56,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('py_matlab')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -92,11 +70,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0d4935a8bb39d98c893ca66b62abc8cf4b059e46c469c990c66e8a9517e82ce8"
+    "hash": "37a927648fdd1c9cb67b01c936c704221e4033da9295afcb0a23fad6702e6998"
    }
   }
  },
