--- a/test_electric_heater.ipynb
+++ b/test_electric_heater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculate Energy and Mass Called\n",
+      "Hot Mass Flow Average: 0.00042 kg/s\n",
+      "Average Power Draw of Heat Pump: 1.087 kW\n",
+      "Maximum Power Draw of Heat Pump: 1.087 kW\n",
+      "Annual Electricity in: 9,521.7 kWh\n",
+      "Capital Cost: 100.00 $\n",
+      "Capacity Factor: 1.000\n",
+      "One Year Fixed O&M Costs: 0.00 $·MMBtu/h/kW/yr\n",
+      "One Year Variable O&M Costs: 0.30 $/yr\n",
+      "One Year Energy Costs: 130.46 $/yr\n",
+      "One Year Operating Costs: 0.45 $·MMBtu/h/kW/yr\n",
+      "Lifetime LCOH: 4.49 $/MMBtu\n"
+     ]
+    }
+   ],
    "source": [
     "heater_test = electric_heater()\n",
-    "heater_test."
+    "heater_test.calculate_energy_and_mass_flow()\n",
+    "heater_test.calculate_costs()\n",
+    "print(heater_test.process_heat_requirement)\n"
    ]
   },
   {
@@ -33,7 +54,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('py_matlab')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -47,12 +68,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0d4935a8bb39d98c893ca66b62abc8cf4b059e46c469c990c66e8a9517e82ce8"
+    "hash": "37a927648fdd1c9cb67b01c936c704221e4033da9295afcb0a23fad6702e6998"
    }
   }
  },
