Added conversions to dictionaries.

--- a/test_components.ipynb
+++ b/test_components.ipynb
@@ -145,33 +145,33 @@
    ],
    "source": [
     "## Converting one component to intput dict\n",
-    "gas_dict = {\n",
-    "    'capital_cost'                  : gas_test.capital_cost.m,\n",
-    "    'year_one_energy_cost'          : gas_test.year_one_energy_costs.m,\n",
-    "    'year_one_fixed_o_and_m'        : gas_test.year_one_fixed_o_and_m.m,\n",
-    "    'year_one_variable_o_and_m'     : gas_test.year_one_variable_o_and_m.m,\n",
-    "    'year_one_cost_of_emissions'    : gas_test.year_one_cost_of_emissions.m,\n",
-    "    'CAGR'                          : gas_test.CAGR.m,\n",
-    "}\n",
-    "\n",
-    "elec_dict = {\n",
-    "    'capital_cost'                  : heater_test.capital_cost.m,\n",
-    "    'year_one_energy_cost'          : heater_test.year_one_energy_costs.m,\n",
-    "    'year_one_fixed_o_and_m'        : heater_test.year_one_fixed_o_and_m.m,\n",
-    "    'year_one_variable_o_and_m'     : heater_test.year_one_variable_o_and_m.m,\n",
-    "    'year_one_cost_of_emissions'    : 0,\n",
-    "    'CAGR'                          : heater_test.CAGR.m, \n",
-    "}\n",
+    "gas_dict = object_to_dict(gas_test)\n",
+    "elec_dict = object_to_dict(heater_test)\n",
     "\n",
     "calculate_cash_flow(gas_dict, elec_dict, 20, 0.10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NPV: 244,959,735.62 $\n",
+      "IRR:  nan percent\n",
+      "PBP:  6.544571857701772\n"
+     ]
+    }
+   ],
+   "source": [
+    "gas_dict = object_to_dict(gas_test)\n",
+    "elec_dict = combined_dict(heater_test, hp_test)\n",
+    "\n",
+    "calculate_cash_flow(gas_dict, elec_dict, 20, 0.10)"
+   ]
   }
  ],
  "metadata": {
