Updated the test components

--- a/test_components.ipynb
+++ b/test_components.ipynb
@@ -46,7 +46,6 @@
       "Lifetime LCOH: 4.42 $/MMBtu\n",
       "Writing all output to a file\n",
       "\n",
-      "1201412.0 USD\n",
       "\n"
      ]
     }
@@ -64,7 +63,7 @@
     "hp_test.run_all('hp_test')\n",
     "\n",
     "print()\n",
-    "print(round(hp_test.capital_cost,0))\n",
+    "#print(round(hp_test.capital_cost,0))\n",
     "#print(300*1000/hp_test.actual_COP)\n",
     "print()"
    ]
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
