Added the component heat pump model

--- a/test_components.ipynb
+++ b/test_components.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from heat_pump_model_v2 import *\n",
+    "from heat_pump_model_components import *\n",
     "from electric_model import *\n",
     "from gas_model import *\n",
     "\n",
