--- a/test_components.ipynb
+++ b/test_components.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from heat_pump_model_components import *\n",
+    "from heat_pump_model import *\n",
     "from electric_model import *\n",
     "from gas_model import *\n",
     "\n",
@@ -60,12 +60,7 @@
     "hp_test.carnot_efficiency_factor_flag = False\n",
     "hp_test.refrigerant = 'R234a'\n",
     "\n",
-    "hp_test.run_all('hp_test')\n",
-    "\n",
-    "print()\n",
-    "#print(round(hp_test.capital_cost,0))\n",
-    "#print(300*1000/hp_test.actual_COP)\n",
-    "print()"
+    "hp_test.run_all('hp_test')"
    ]
   },
   {
