--- a/test_electric_heater.ipynb
+++ b/test_electric_heater.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from electric_heat_model import *\n",
+    "from electric_model import *\n",
     "from libraries import * \n",
     "from refrigerant_properties import *\n",
     "import numpy as np\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,38 +23,33 @@
      "output_type": "stream",
      "text": [
       "Calculate Energy and Mass Called\n",
-      "Hot Mass Flow Average: 0.00042 kg/s\n",
-      "Average Power Draw of Heat Pump: 1.087 kW\n",
-      "Maximum Power Draw of Heat Pump: 1.087 kW\n",
-      "Annual Electricity in: 9,521.7 kWh\n",
-      "Capital Cost: 100.00 $\n",
+      "Hot Mass Flow Average: 0.406 kg/s\n",
+      "Average Power Draw of Electric Heater: 1086.957 kW\n",
+      "Maximum Power Draw of Electric Heater: 1086.957 kW\n",
+      "Annual Electricity in: 9,521,739.1 kWh\n",
+      "Capital Cost: 100,000.00 $\n",
       "Capacity Factor: 1.000\n",
-      "One Year Fixed O&M Costs: 0.00 $·MMBtu/h/kW/yr\n",
-      "One Year Variable O&M Costs: 0.30 $/yr\n",
-      "One Year Energy Costs: 130.46 $/yr\n",
-      "One Year Operating Costs: 0.45 $·MMBtu/h/kW/yr\n",
-      "Lifetime LCOH: 4.49 $/MMBtu\n"
+      "One Year Fixed O&M Costs: 3.41 $·MMBtu/h/kW/yr\n",
+      "One Year Variable O&M Costs: 298.90 $/yr\n",
+      "One Year Energy Costs: 130,456.52 $/yr\n",
+      "One Year Operating Costs: 449.57 $·MMBtu/h/kW/yr\n",
+      "Lifetime LCOH: 4.58 $/MMBtu\n",
+      "1.0 megawatt\n"
      ]
     }
    ],
    "source": [
     "heater_test = electric_heater()\n",
+    "heater_test.construct_yaml_input_quantities('electric_model_inputs.yml')\n",
     "heater_test.calculate_energy_and_mass_flow()\n",
     "heater_test.calculate_costs()\n",
     "print(heater_test.process_heat_requirement)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -73,7 +68,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "37a927648fdd1c9cb67b01c936c704221e4033da9295afcb0a23fad6702e6998"
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
    }
   }
  },
