--- a/test_gas.ipynb
+++ b/test_gas.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from heat_pump_model import *\n",
+    "from gas_model import *\n",
     "from libraries import * \n",
     "from refrigerant_properties import *\n",
     "import numpy as np\n",
@@ -40,16 +40,13 @@
     }
    ],
    "source": [
-    "hp_test = heat_pump()\n",
-    "hp_test.construct_yaml_input_quantities('heat_pump_model_inputs.yml')\n",
-    "hp_test.hot_temperature_desired = Q_(np.array([120]*8760), 'degC')\n",
-    "hp_test.hot_temperature_minimum = Q_(np.array([80]*8760), 'degC')\n",
-    "hp_test.cold_temperature_available = Q_(np.array([60]*8760), 'degC')\n",
-    "hp_test.carnot_efficiency_factor = Q_('0.55')\n",
-    "hp_test.carnot_efficiency_factor_flag = False\n",
-    "hp_test.refrigerant = 'R234a'\n",
+    "gas_test = gas_heater()\n",
+    "gas_test.construct_yaml_input_quantities('gas_model_inputs.yml')\n",
+    "gas_test.hot_temperature = Q_(np.array([120]*8760), 'degC')\n",
+    "gas_test.cold_temperature = Q_(np.array([60]*8760), 'degC')\n",
+    "gas_test.run_all('gas_test')\n",
     "\n",
-    "hp_test.run_all('hp_test')"
+    "print(gas_test.capital_cost)"
    ]
   },
   {
