Unified final cases

--- a/test_components.ipynb
+++ b/test_components.ipynb
@@ -44,15 +44,13 @@
       "One Year Energy Costs: 415,688.77 $/yr\n",
       "One Year Operating Costs: 1,600.05 $·MMBtu/h/kW/yr\n",
       "Lifetime LCOH: 4.42 $/MMBtu\n",
-      "Writing all output to a file\n",
-      "\n",
-      "\n"
+      "Writing all output to a file\n"
      ]
     }
    ],
    "source": [
     "hp_test = heat_pump()\n",
-    "hp_test.construct_yaml_input_quantities('heatpump_model_inputs.yml')\n",
+    "hp_test.construct_yaml_input_quantities('heat_pump_model_inputs.yml')\n",
     "hp_test.hot_temperature_desired = Q_(np.array([120]*8760), 'degC')\n",
     "hp_test.hot_temperature_minimum = Q_(np.array([80]*8760), 'degC')\n",
     "hp_test.cold_temperature_available = Q_(np.array([60]*8760), 'degC')\n",
