--- a/test_heat_pump.ipynb
+++ b/test_heat_pump.ipynb
@@ -22,20 +22,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Calculate COP Called\n",
+      "Average Theoretical COP:  5.687857142857141 dimensionless\n",
+      "Average Estimated COP:  2.8439285714285707 dimensionless\n",
       "Calculate Energy and Mass Called\n",
-      "Hot Mass Flow Average: 0.406 kg/s\n",
-      "Average Power Draw of Gas Heater: 1250.000 kW\n",
-      "Maximum Power Draw of Gas Heater: 1250.000 kW\n",
-      "Annual Gas in: 36.6 MMSCF\n",
-      "Capital Cost: 3,070.93 $\n",
+      "Hot Mass Flow Average: 99.0 kg/s\n",
+      "Cold Average Outlet Temperature: 56.00 °C\n",
+      "Average Power Draw of Heat Pump: 1408.160 kW\n",
+      "Maximum Power Draw of Heat Pump: 1408.160 kW\n",
+      "Annual Electricity in: 12,335,479.8 kWh\n",
+      "Calculate Heat Pump Costs\n",
+      "Capital Cost: 1,201,411.76 $\n",
       "Capacity Factor: 1.000\n",
-      "One Year Fixed O&M Costs: 170.61 $/yr\n",
-      "One Year Variable O&M Costs: 298.90 $/yr\n",
-      "One Year Energy Costs: 747,258.91 $/yr\n",
-      "One Year Operating Costs: 747,728.42 $/yr\n",
-      "Lifetime LCOH: 25.02 $/MMBtu\n",
-      "Writing all output to a file\n",
-      "3070.9270408395387 USD\n"
+      "One Year Fixed O&M Costs: 161.24 $·MMBtu/h/kW/yr\n",
+      "One Year Variable O&M Costs: 5,985.10 $/yr\n",
+      "One Year Energy Costs: 415,688.77 $/yr\n",
+      "One Year Operating Costs: 1,600.05 $·MMBtu/h/kW/yr\n",
+      "Lifetime LCOH: 4.42 $/MMBtu\n",
+      "Writing all output to a file\n"
      ]
     }
    ],
